--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,6 +7,7 @@
   &__container {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 
     height: 80px;
     z-index: 1;
@@ -16,43 +17,6 @@
     width: 124px;
     height: 34px;
     flex: 0 0 auto;
-  }
-
-  &__menu {
-    flex: 1 1 auto;
-    .menu {
-      flex: 1 1 auto;
-      &__list {
-        display: flex;
-
-        justify-content: center;
-        align-items: center;
-
-        gap: 40px;
-
-        color: inherit;
-        font-size: 16px;
-      }
-
-      &__item {
-        position: relative;
-        color: inherit;
-        font-size: 16px;
-        line-height: 20px;
-        &:hover {
-          &:after {
-            content: "";
-            display: block;
-            position: absolute;
-
-            width: 100%;
-            height: 1px;
-
-            background-color: var(--white);
-          }
-        }
-      }
-    }
   }
 
   &__login-button-wrapper {
