--- a/src/components/Perk/Perk.module.scss
+++ b/src/components/Perk/Perk.module.scss
@@ -12,7 +12,7 @@
   color: var(--white);
   background-color: var(--dark-not-black);
   &__title {
-    font-size: 24px;
+    //font-size: 16px;
   }
 
   &__description {
