--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -73,17 +73,21 @@
   }
 
   &__buy {
-    display: flex;
-    flex-direction: column;
+    postion: relative;
+    width:100%;
+    
+    &__container {
+      display: flex;
+      flex-direction: column;
 
-    justify-content: center;
-    align-items: center;
+      justify-content: center;
+      align-items: center;
 
-    gap: 40px;
-    padding: 40px;
+      gap: 40px;
+      padding: 40px 0;
 
-    width: 100%;
-    margin: var(--section-spacing) 0;
+      margin: 0 !important;
+    }
 
     h2 {
       font-family: "Roboto", sans-serif;
