Delete unused variables and make modal component

--- a/src/components/Perk/Perk.module.scss
+++ b/src/components/Perk/Perk.module.scss
@@ -10,7 +10,7 @@
   border-radius: 8px;
 
   color: var(--white);
-  background-color: var(--dark-not-black);
+  background-color: var(--not-quite-black);
   &__title {
     //font-size: 16px;
   }
